# samesh

./: .gitignore  .gitmodules  README.md  pyproject.toml
assets/: arch2.glb  ice_cream.glb  jacket.glb  potion.glb  squidward_house.glb
configs/: mesh_segmentation.yaml  mesh_segmentation_coseg.yaml  mesh_segmentation_princeton.yaml  mesh_segmentation_shape_diameter_function.yaml  mesh_segmentation_shape_diameter_function_coseg.yaml
notebooks/: mesh_samesh.ipynb  mesh_segmentation_annotations.ipynb  mesh_segmentation_recolormap.ipynb
scripts/: convert_gif2mp4.py  convert_mesh2gif.py  convert_mesh_formats.py  generate_dataset_mesh_segmentation_comparison.py
src/samesh/data/: common.py  loaders.py
src/samesh/metrics/: mesh_segmentation.py  mesh_segmentation_cut_discrepancy.py  mesh_segmentation_test.py
src/samesh/models/: sam.py  sam_mesh.py  shape_diameter_function.py
src/samesh/renderer/: renderer.py  renderer_animations.py  shader_programs.py
src/samesh/renderer/shaders/: barycentric.frag  barycentric.vert  faceid.frag  faceid.vert  normal.vert
src/samesh/utils/: cameras.py  math.py  mesh.py  polyhedra.py
